crates/carta/tests/snapshots/golden_writer__man__links__autolink-decoded-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
\c
.UR http://example.com/a%20b
.UE \c
.PP
\c
.UR http://example.com/a%20b
.UE \c
