crates/carta/tests/snapshots/golden_writer__man__links__internal-anchor.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.SH Section One
Back to the section, or an \c
.UR https://example.org/docs
outside page
.UE \c
\&.
