crates/carta/tests/snapshots/golden_writer__man__links__title-with-quote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
\c
.UR http://example.com/
x
.UE \c
.PP
\c
.UR http://example.com/
y
.UE \c
